   The patch was not used because simultaneously Robert Martin-Legene
   supplied a patch to Nameservers.pm that allowed the same async
   functionality through the use of loop_once method. Robert M-L's 
   code also carefully manages the TCP sockets, so that they can 
   deal with AXFRs.

   Robert S. has been so kind to review Robert M-L's code and is hereby
   kindly acknowledged.


Fix bgsend srcaddr for IPv6 Achim Adam previously noticed that the
  source address wildard "::" works provides better portability than
  "0". We forgot to fix the bgsend() part earlier.



Fix rt.cpan.org 14624 

  Fixed documentation of Nameserver.pm Replyhandler and fixed a bug
  that prevented the peerhost to be set.

Fix rt.cpan.org 14700

  mistyped _name2wire helper function name. Noticed and patched by Simon 
  Josefsson.

Fix rt.cpan.org 13944

  Terminating dot not printed when printing SRV record. The SRV dname should
  be printed as FQDN, that is, including the dot at the end.
  Acknowledgements Jakob Schlyter. 

  While adding the "dot" I noticed that in the fileformat parsing code
  there might be theoretical corner cases where rdata elements are not
  properly read. The code needs an audit for this.

Fix srcport for socket creation in bgsend method

   Lionel Cons noted and patched a small bug in bgsocket creation code for
   lib/Net/DNS/Resolver/Base.pm


*** 0.53_01 July 31, 2005

Fix rt.cpan.org 13809

   "Phar" noted that the peerhost is never passed to the make_reply function
   in nameserver.pm and provided the trivial patch. 

Fix rt.cpan.org 13922

    Fixed a problem with persistent TCP sockets which was introdcuced
    because of using the address family as an index to the array of
    persistent sockets. 

    Used AF_UNSPEC for the array index for the TCP socket; just to choose
    a number. The key to the persistent sockets is the remote nameserver:port 
    combination.

    Acknowledgements to Mike Mitchell for reporting the bug and testing